Fix white outline issue on small delete button in comments

--- a/ghendi/static/css/element_styles.css
+++ b/ghendi/static/css/element_styles.css
@@ -152,6 +152,7 @@ textarea {
     min-width: 60px;
     white-space: nowrap;
     margin: 0 2px;
+    border: none;
 }
 
 .btn-small:hover {
